--- a/AUTHORS
+++ b/AUTHORS
@@ -1,18 +1,19 @@
-Cantera developers:
-
-Dave Goodwin
-Harry Moffat
-Raymond Speth
-
-Contributors:
+Cantera was originally developed by Dave Goodwin, with its first public release
+in 2001. Since then, many people have contributed to Cantera. Below is a
+partial, alphabetical list of developers and contributors to Cantera over the
+years. If you've been left off, please report the omission on the Github issue
+tracker.
 
 Philip Berndt
 Victor Brunini
 Steven Decaluwe
 Thomas Fiala
 David Fronczek
+Dave Goodwin
 John Hewson
 Nicholas Malaya
+Harry Moffat
 Andreas Rücker
 Santosh Shanbhogue
+Raymond Speth
 Bryan Weber
