Add institutional affiliations to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,15 +5,15 @@ years. If you've been left off, please report the omission on the Github issue
 tracker.
 
 Philip Berndt
-Victor Brunini
-Steven Decaluwe
-Thomas Fiala
+Victor Brunini, Sandia National Laboratory
+Steven Decaluwe, Colorado School of Mines
+Thomas Fiala, Technische Universität München
 David Fronczek
-Dave Goodwin
-John Hewson
-Nicholas Malaya
-Harry Moffat
+Dave Goodwin, California Institute of Technology
+John Hewson, Sandia National Laboratory
+Nicholas Malaya, University of Texas at Austin
+Harry Moffat, Sandia National Laboratory
 Andreas Rücker
-Santosh Shanbhogue
-Raymond Speth
-Bryan Weber
+Santosh Shanbhogue, Massachusetts Institute of Technology
+Raymond Speth, Massachusetts Institute of Technology
+Bryan Weber, University of Connecticut
