[1D] Fix IonFlow docstrings and simplify testIonFlame

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ tracker.
 
 Philip Berndt
 Victor Brunini, Sandia National Laboratory
+Bang-Shiuh Chen, Purdue University
 Steven Decaluwe, Colorado School of Mines
 Thomas Fiala, Technische Universität München
 David Fronczek
