--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cantera (2.4.0b2-1+bionic0) bionic; urgency=low
+
+  * Beta build of Cantera 2.4.0
+
+ -- Raymond Speth <speth@mit.edu>  Fri, 10 Aug 2018 13:57:01 -0400
+
 cantera (2.4.0b1-1+bionic0) bionic; urgency=low
 
   * Beta build of Cantera 2.4.0
