Change all github.io links to cantera.org links

--- a/INSTALL
+++ b/INSTALL
@@ -18,6 +18,4 @@ shown by running `scons` with no other arguments.
 Detailed Instructions
 ---------------------
 
-See the file files in the `doc/sphinx/compiling/` directory or the HTML
-instructions available at
-http://cantera.github.io/docs/sphinx/html/compiling/index.html.
+See the instructions available at [online](https://cantera.org/install/index.html)
