Update AUTHORS list with authors from all Cantera organization repos

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,17 +4,37 @@ partial, alphabetical list of developers and contributors to Cantera over the
 years. If you've been left off, please report the omission on the Github issue
 tracker.
 
+Emil Atz
 Philip Berndt
+Tilman Bremer
 Victor Brunini, Sandia National Laboratory
 Bang-Shiuh Chen, Purdue University
+Ryan Crisanti
+Nicholas Curtis
 Steven DeCaluwe, Colorado School of Mines
+Vishesh Devgan
 Thomas Fiala, Technische Universität München
 David Fronczek
+@g3bk47
+Matteo Giani
 Dave Goodwin, California Institute of Technology
 John Hewson, Sandia National Laboratory
+Trevor Hickey
+Yuanjie Jiang
+Jon Kristofer
+Kyle Linevitch, Jr.
+Christopher Leuth
 Nicholas Malaya, University of Texas at Austin
+Evan McCorkle
+Ivan Mitrichev, Mendeleev University of Chemical Technology of Russia
 Harry Moffat, Sandia National Laboratory
+Christopher Neal
+Kyle Niemeyer, Oregon State University
+@pwcnorthrop
 Andreas Rücker
+Jeff Santner
 Santosh Shanbhogue, Massachusetts Institute of Technology
+David Sondak
 Raymond Speth, Massachusetts Institute of Technology
 Bryan Weber, University of Connecticut
+Armin Wehrfritz
