Update AUTHORS list

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Jon Kristofer
 Kyle Linevitch, Jr.
 Christopher Leuth
 Nicholas Malaya, University of Texas at Austin
+Thanasis Mattas, Aristotle University of Thessaloniki
 Evan McCorkle
 Ivan Mitrichev, Mendeleev University of Chemical Technology of Russia
 Harry Moffat, Sandia National Laboratory
@@ -33,6 +34,8 @@ Kyle Niemeyer, Oregon State University
 @pwcnorthrop
 Andreas Rücker
 Jeff Santner
+Satyam Saxena
+Ingmar Schoegl, Louisiana State University
 Santosh Shanbhogue, Massachusetts Institute of Technology
 David Sondak
 Raymond Speth, Massachusetts Institute of Technology
