Update AUTHORS list

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ tracker.
 
 Emil Atz
 Philip Berndt
+Wolfgang Bessler, Offenburg University of Applied Science
 Tilman Bremer
 Victor Brunini, Sandia National Laboratory
 Bang-Shiuh Chen, Purdue University
@@ -25,16 +26,20 @@ Jon Kristofer
 Kyle Linevitch, Jr.
 Christopher Leuth
 Nicholas Malaya, University of Texas at Austin
+Thanasis Mattas, Aristotle University of Thessaloniki
 Evan McCorkle
 Ivan Mitrichev, Mendeleev University of Chemical Technology of Russia
 Harry Moffat, Sandia National Laboratory
 Christopher Neal
 Kyle Niemeyer, Oregon State University
-@pwcnorthrop
+Paul Northrop
 Andreas Rücker
 Jeff Santner
+Satyam Saxena
+Ingmar Schoegl, Louisiana State University
 Santosh Shanbhogue, Massachusetts Institute of Technology
 David Sondak
 Raymond Speth, Massachusetts Institute of Technology
+Sergey Torokhov
 Bryan Weber, University of Connecticut
 Armin Wehrfritz
