[Thermo] Provide const access for speciesThermo()

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,7 +18,7 @@ Steven DeCaluwe (@decaluwe), Colorado School of Mines
 Vishesh Devgan (@vdevgan)
 Thomas Fiala (@thomasfiala), Technische Universität München
 David Fronczek
-@g3bk47
+Thorsten Zirwes, Karlsruhe Institute of Technology
 Matteo Giani (@MarcDuQuesne)
 Dave Goodwin, California Institute of Technology
 John Hewson (@jchewson), Sandia National Laboratory
