Fix order of AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,7 +18,6 @@ Steven DeCaluwe (@decaluwe), Colorado School of Mines
 Vishesh Devgan (@vdevgan)
 Thomas Fiala (@thomasfiala), Technische Universität München
 David Fronczek
-Thorsten Zirwes, Karlsruhe Institute of Technology
 Matteo Giani (@MarcDuQuesne)
 Dave Goodwin, California Institute of Technology
 John Hewson (@jchewson), Sandia National Laboratory
@@ -51,3 +50,4 @@ Laurien Vandewalle (@lavdwall)
 Bryan Weber (@bryanwweber), University of Connecticut
 Armin Wehrfritz (@awehrfritz)
 Richard West (@rwest), Northeastern University
+Thorsten Zirwes (@g3bk47), Karlsruhe Institute of Technology
