--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ John Hewson (@jchewson), Sandia National Laboratory
 Trevor Hickey (@luxe)
 Yuanjie Jiang
 Benjamin Kee (@lionkey)
+Daniel Korff (@korffdm), Colorado School of Mines
 Jon Kristofer
 Samesh Lakothia (@sameshl)
 Kyle Linevitch, Jr. (@KyleLinevitchJr)
