--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cantera (2.5.0rc1-1+groovy0) groovy; urgency=low
+
+  * Testing release candidate for new upstream release
+
+ -- Raymond Speth <speth@mit.edu>  Sat, 06 Feb 2021 18:04:02 -0500
+
 cantera (2.5.0rc1-1+focal3) focal; urgency=low
 
   * Testing release candidate for new upstream release
