--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cantera (2.5.0rc1-1+bionic2) bionic; urgency=low
+
+  * Testing release candidate for new upstream release
+
+ -- Raymond Speth <speth@mit.edu>  Sun, 07 Feb 2021 10:04:16 -0800
+
 cantera (2.5.0rc1-1+bionic1) bionic; urgency=low
 
   * Testing release candidate for new upstream release
