--- a/debian/changelog
+++ b/debian/changelog
@@ -1,44 +1,8 @@
-cantera (2.5.0rc1-1+bionic3) bionic; urgency=medium
+cantera (2.5.0-1+bionic0) bionic; urgency=medium
 
-  * Testing release candidate for new upstream release
+  * New upstream release
 
- -- Raymond Speth <speth@mit.edu>  Sun, 07 Feb 2021 12:30:03 -0800
-
-cantera (2.5.0rc1-1+bionic2) bionic; urgency=low
-
-  * Testing release candidate for new upstream release
-
- -- Raymond Speth <speth@mit.edu>  Sun, 07 Feb 2021 10:04:16 -0800
-
-cantera (2.5.0rc1-1+bionic1) bionic; urgency=low
-
-  * Testing release candidate for new upstream release
-
- -- Raymond Speth <speth@mit.edu>  Sun, 07 Feb 2021 09:39:58 -0800
-
-cantera (2.5.0rc1-1+focal3) focal; urgency=low
-
-  * Testing release candidate for new upstream release
-
- -- Raymond Speth <speth@mit.edu>  Sat, 06 Feb 2021 14:22:50 -0500
-
-cantera (2.5.0rc1-1+focal2) focal; urgency=low
-
-  * Testing release candidate for new upstream release
-
- -- Raymond Speth <speth@mit.edu>  Sat, 06 Feb 2021 14:00:21 -0500
-
-cantera (2.5.0rc1-1+focal1) focal; urgency=low
-
-  * Testing release candidate for new upstream release
-
- -- Raymond Speth <speth@mit.edu>  Sat, 06 Feb 2021 13:41:14 -0500
-
-cantera (2.5.0rc1-1+focal0) focal; urgency=low
-
-  * Testing release candidate for new upstream release
-
- -- Raymond Speth <speth@mit.edu>  Fri, 05 Feb 2021 19:18:51 -0500
+ -- Raymond Speth <speth@mit.edu>  Mon, 08 Feb 2021 22:11:00 -0500
 
 cantera (2.4.0-1+bionic0) bionic; urgency=low
 
