--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cantera (2.5.0-1+bionic2) bionic; urgency=medium
+
+  * Build with dependencies in a *different* PPA
+
+ -- Raymond Speth <speth@mit.edu>  Mon, 08 Feb 2021 23:02:57 -0500
+
 cantera (2.5.0-1+bionic1) bionic; urgency=medium
 
   * Rebuild with dependencies in new PPA
