--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cantera (2.5.1-1+bionic0) bionic; urgency=medium
+
+  * New upstream release
+
+ -- Raymond Speth <speth@mit.edu>  Fri, 12 Feb 2021 17:43:42 -0500
+
 cantera (2.5.0-1+bionic2) bionic; urgency=medium
 
   * Build with dependencies in a *different* PPA
