update authors' list
Update AUTHORS

insert name alphabetically

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@ years. If you've been left off, please report the omission on the Github issue
 tracker.
 
 Rounak Agarwal (@agarwalrounak)
+David Akinpelu (@DavidAkinpelu), Louisiana State University
 Emil Atz (@EmilAtz)
 Philip Berndt
 Wolfgang Bessler (@wbessler), Offenburg University of Applied Science
