Adding the name in the Authors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ John Hewson (@jchewson), Sandia National Laboratory
 Trevor Hickey (@luxe)
 Yuanjie Jiang
 Benjamin Kee (@lionkey)
+Gandhali Kogekar (@gkogekar)
 Daniel Korff (@korffdm), Colorado School of Mines
 Jon Kristofer
 Samesh Lakothia (@sameshl)
