add Tsang closed-form falloff

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ Steven DeCaluwe (@decaluwe), Colorado School of Mines
 Vishesh Devgan (@vdevgan)
 Thomas Fiala (@thomasfiala), Technische Universität München
 David Fronczek
+Mark E. Fuller (@mefuller), Technion
 Matteo Giani (@MarcDuQuesne)
 Dave Goodwin, California Institute of Technology
 John Hewson (@jchewson), Sandia National Laboratory
